--- a/sections/product-template-fs.liquid
+++ b/sections/product-template-fs.liquid
@@ -369,7 +369,7 @@
 
 {% schema %}
   {
-    "name": "Product pages",
+    "name": "Product pages(FS)",
     "settings": [
       {
         "type": "checkbox",
