--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,12 +1,4 @@
-{% if customer  %}
-
-  {% assign Role_User = 'general.Role.User' | t %}
-  {% assign Role_Printer = 'general.Role.Printer' | t %}
-  {% assign Role_Manager = 'general.Role.Manager' | t %}
-  {% assign Role_ASM = 'general.Role.ASM' | t %}
-  {% assign Role_Admin = 'general.Role.Admin' | t %}
-
-{% endif %}
+{% include 'customer-account-common-code' with 'theme-layout-code' %}
 
 {% if product.type  == 'SHOPSTORM_HIDDEN_PRODUCT' %}
   Product is not available
@@ -17,7 +9,11 @@
   The contents of the product.liquid template can be found in /sections/product-template.liquid
 {% endcomment %}
 
-{% section 'product-template' %}
+{% if fs_shop_active %}
+  {% section 'product-template-fs' %}
+{% else %}
+  {% section 'product-template' %}
+{% endif %}
 
 {% if customer and customer.tags contains Role_ASM %}
 <!-- modalContent {% include 'edit-variant-template' %} modalContent -->
