--- a/layout/checkout.updated-code.liquid
+++ b/layout/checkout.updated-code.liquid
@@ -12,13 +12,13 @@
 
     {{ checkout_stylesheets }}
     {{ checkout_scripts }}
-    
+
     {{ '//ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js' | script_tag }}
-    
+
     <style id="temp-style">
       .total-recap__final-price{ visibility: hidden !important; }
     </style>
-    
+
   </head>
   <body>
     {{ skip_to_content_link }}
@@ -57,50 +57,24 @@
     </div>
 
     {{ tracking_code }}
-    
-    {% assign region_NorthEast = "general.Region_Tags.NorthEast" | t %}
-    {% assign region_SouthEast = "general.Region_Tags.SouthEast" | t %}
-    {% assign region_California = "general.Region_Tags.California" | t %}
-    {% assign region_South = "general.Region_Tags.South" | t %}
-    {% assign region_Mountain = "general.Region_Tags.Mountain" | t %}
-    {% assign region_MidAtlantic = "general.Region_Tags.MidAtlantic" | t %}
-    {% assign region_MidWest = "general.Region_Tags.MidWest" | t %}
-    {% assign region_GreatLakes = "general.Region_Tags.GreatLakes" | t %}
-    {% assign region_External = "general.Region_Tags.External" | t %}
-    
-    {% if customer.tags contains region_NorthEast %}
-      {% assign customer_region_tag = region_NorthEast %}
-    {% elsif customer.tags contains region_SouthEast %}
-      {% assign customer_region_tag = region_SouthEast %}
-    {% elsif customer.tags contains region_California %}
-      {% assign customer_region_tag = region_California %}
-    {% elsif customer.tags contains region_South %}
-      {% assign customer_region_tag = region_South %}
-    {% elsif customer.tags contains region_Mountain %}
-      {% assign customer_region_tag = region_Mountain %}
-    {% elsif customer.tags contains region_MidAtlantic %}
-      {% assign customer_region_tag = region_MidAtlantic %}
-    {% elsif customer.tags contains region_MidWest %}
-      {% assign customer_region_tag = region_MidWest %}
-    {% elsif customer.tags contains region_GreatLakes %}
-      {% assign customer_region_tag = region_GreatLakes %}
-    {% endif %}
-    
-    
+
+    {% include 'customer-account-common-code' with 'theme-layout-code' %}
+
+
       {% if customer.tags contains region_NorthEast %}
     	<style>
           .content-box__row:nth-of-type(2){ display:none; }
         </style>
       {% endif %}
-          
+
     <script>
-        var payment_cc, payment_cd;  
-          
+        var payment_cc, payment_cd;
+
         $(document).ready(function(){
           startPCC();
 
         });
-          
+
         function startPCC(){
           if($('button[type="submit"] span.btn__content:contains("COMPLETE ORDER")').parent().length > 0)
           	payment_cc = setInterval(function(){ //console.log('running')
@@ -110,34 +84,34 @@
               	siezeBtn();
             },100);
         }
-          
+
         function siezeBtn(){
             $('form[data-payment-form]').unbind('submit').bind('submit', function(e){
               e.preventDefault(); console.log('payment code required');
             });
-            
+
             $('button[type="submit"] span.btn__content:contains("COMPLETE ORDER")').parent().addClass('disabled blink_me').off('click').on('click', function(e){
-              e.preventDefault(); 
+              e.preventDefault();
               $('#checkout_reduction_code')[0].focus();
               $(window).scrollTop(0); console.log('clicked');
             });
-            
+
         }
-          
+
         function releaseBtn(){
           $('form[data-payment-form]').unbind('submit');
           $('button[type="submit"] span.btn__content:contains("COMPLETE ORDER")').parent().removeClass('disabled blink_me').off('click');
-          
+
         }
     </script>
-          
+
     <style>
         button[type='submit'].step__footer__continue-btn.disabled{
           background: #ccc !important;
           cursor: not-allowed;
           position:relative;
         }
-          
+
         button[type='submit'].step__footer__continue-btn.disabled:after{
           content:'Payment Code Required';
           color:red;
@@ -150,16 +124,16 @@
           white-space: nowrap;
           margin-bottom: 15px;
         }
-          
+
         button[type='submit'].step__footer__continue-btn.disabled.blink_me:after {
           animation: blinker 1.5s linear infinite;
         }
 
-        @keyframes blinker {  
+        @keyframes blinker {
           50% { opacity: 0; }
         }
     </style>
    {% include 'mesh-window-checkout' %}
-    
+
   </body>
 </html>
