--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -1,37 +1,6 @@
 {% if customer  %}
 
-  {% assign Role_User = 'general.Role.User' | t %}
-  {% assign Role_Printer = 'general.Role.Printer' | t %}
-  {% assign Role_Manager = 'general.Role.Manager' | t %}
-  {% assign Role_ASM = 'general.Role.ASM' | t %}
-  {% assign Role_Admin = 'general.Role.Admin' | t %}
-
-  {% assign region_NorthEast = "general.Region_Tags.NorthEast" | t %}
-  {% assign region_SouthEast = "general.Region_Tags.SouthEast" | t %}
-  {% assign region_California = "general.Region_Tags.California" | t %}
-  {% assign region_South = "general.Region_Tags.South" | t %}
-  {% assign region_Mountain = "general.Region_Tags.Mountain" | t %}
-  {% assign region_MidAtlantic = "general.Region_Tags.MidAtlantic" | t %}
-  {% assign region_MidWest = "general.Region_Tags.MidWest" | t %}
-  {% assign region_GreatLakes = "general.Region_Tags.GreatLakes" | t %}
-
-  {% if customer.tags contains region_NorthEast %}
-    {% assign customer_region_tag = region_NorthEast %}
-  {% elsif customer.tags contains region_SouthEast %}
-    {% assign customer_region_tag = region_SouthEast %}
-  {% elsif customer.tags contains region_California %}
-    {% assign customer_region_tag = region_California %}
-  {% elsif customer.tags contains region_South %}
-    {% assign customer_region_tag = region_South %}
-  {% elsif customer.tags contains region_Mountain %}
-    {% assign customer_region_tag = region_Mountain %}
-  {% elsif customer.tags contains region_MidAtlantic %}
-    {% assign customer_region_tag = region_MidAtlantic %}
-  {% elsif customer.tags contains region_MidWest %}
-    {% assign customer_region_tag = region_MidWest %}
-  {% elsif customer.tags contains region_GreatLakes %}
-    {% assign customer_region_tag = region_GreatLakes %}
-  {% endif %}
+  {% include 'customer-account-common-code' with 'theme-layout-code' 
 
   {% if customer and customer.tags contains Role_ASM %}
     {% assign collection_handle = customer_region_tag | remove: 'Region:' |replace:'0','o' | downcase | append: '-my-products' %}
@@ -73,13 +42,13 @@
               <div class="grid__item one-third medium-down--one-third">
                 <span class="h4">{{ 'cart.label.price' | t }}</span>
               </div>
-              
-              
+
+
               <div class="grid__item one-whole medium-down--one-whole text-right">
                 <span class="h4">{{ 'cart.label.quantity' | t }}</span>
               </div>
-              
-              
+
+
               <div class="grid__item one-third medium-down--one-third text-right">
                 <span class="h4">{{ 'cart.label.total' | t }}</span>
               </div>
@@ -92,9 +61,9 @@
       {% comment %}
         Loop through products in the cart
       {% endcomment %}
-      
+
       {% assign total_calculated_price_difference = 0 %}
-      
+
       {% for item in cart.items %}
         <div class="cart__row">
           <div class="grid--full cart__row--table-large">
@@ -120,7 +89,7 @@
                   {% unless item.variant.title contains 'Default' %}{% endunless %}
                     <br>
                     <small>{{ item.variant.title |remove:' / Default' |remove:' / Region:NorthEast' |remove:' / Region:SouthEast' |remove:' / Region:Mountain' |remove:' / Region:California' |remove:' / Region:MiidAtlantic' |remove:' / Region:MidWest'  |remove:' / Region:GreatLakes' |remove:customer_region_tag }}</small>
-                  
+
 
                   {% comment %}
                     Optional, loop through custom product line items if available
@@ -131,13 +100,13 @@
                   {% assign propertySize = item.properties | size %}
                   {% if propertySize > 0 %}
                     {% for p in item.properties %}
-                  
+
                       {% if p.first contains 'Unit Price' %}
                   		{% assign p_last = p.last | split:'$' | last %}
                   		{% assign item_price = item.price | money_without_currency | round: 2 %}
                   		{% assign total_calculated_price_difference = total_calculated_price_difference | plus: p_last | minus: item_price %} <script>console.log('gotcha: {{ p_last }}, {{ item_price }}, {{ total_calculated_price_difference }}');</script>
                       {% endif %}
-                  
+
                       {% assign first_character_in_key = p.first | truncate: 1, '' %}
                       {% unless p.last == blank or first_character_in_key == '_' or p.first contains 'Parent ID' %}
                         <br>
@@ -171,14 +140,14 @@
                   <span class="cart__mini-labels">{{ 'cart.label.price' | t }}</span>
                   <span class="h5">{{ item.price | money }}</span>
                 </div>
-				
-                
+
+
                 <div class="grid__item one-whole text-right w3-right">
                   <label for="updates_{{ item.key }}" class="cart__mini-labels">{{ 'cart.label.quantity' | t }}</label>
                   <input style="margin-right:0;" type="number" readonly disabled class="cart__quantity-selector" name="updates[]" id="updates_{{ item.key }}" value="{{ item.quantity }}"  min="0" aria-label="{{ 'cart.label.quantity' | t }}">
                 </div>
-                
-				
+
+
                 <div class="grid__item one-third text-right">
                   <span class="cart__mini-labels">{{ 'cart.label.total' | t }}</span>
                   <span class="h5">
@@ -249,7 +218,7 @@
               Continue shopping button
             {% endcomment %}
             <a class="btn--secondary" href="/pages/catalog">{{ 'cart.general.continue_shopping' | t }}</a>
-            
+
 			{% comment %}
             <button type="submit" name="update" class="btn--secondary update-cart">{{ 'cart.general.update' | t }}</button>
             <button type="submit" name="checkout" class="btn">{{ 'cart.general.checkout' | t }}</button>
@@ -296,15 +265,15 @@
         {% for property in line_item.properties %}
           console.log('property', '= {{ property }}');
         {% endfor %}
-    {% endfor %}  
-                      
+    {% endfor %}
+
     $('a.cart__remove').on('click', function(){
       $this = $(this);
       if(event.button == 0){
           event.preventDefault();
-          $.when(data = $.getJSON('/cart.js')).done(function(){ 
+          $.when(data = $.getJSON('/cart.js')).done(function(){
             if(JSON.stringify({{ cart | json }}) === JSON.stringify(data.responseJSON) ){
-              location.assign($this.attr('href')); 
+              location.assign($this.attr('href'));
             }else{
               alert('Refreshing the cart, it is not updated!!');
               location.reload();
