--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,19 +1,6 @@
 {% if customer  %}
-	
-  {% assign Role_User = 'general.Role.User' | t %}
-  {% assign Role_Printer = 'general.Role.Printer' | t %}
-  {% assign Role_Manager = 'general.Role.Manager' | t %}
-  {% assign Role_ASM = 'general.Role.ASM' | t %}
-  {% assign Role_Admin = 'general.Role.Admin' | t %}
 
-  {% assign region_NorthEast = "general.Region_Tags.NorthEast" | t %}
-  {% assign region_SouthEast = "general.Region_Tags.SouthEast" | t %}
-  {% assign region_California = "general.Region_Tags.California" | t %}
-  {% assign region_South = "general.Region_Tags.South" | t %}
-  {% assign region_Mountain = "general.Region_Tags.Mountain" | t %}
-  {% assign region_MidAtlantic = "general.Region_Tags.MidAtlantic" | t %}
-  {% assign region_MidWest = "general.Region_Tags.MidWest" | t %}
-  {% assign region_GreatLakes = "general.Region_Tags.GreatLakes" | t %}
+  {% include 'customer-account-common-code' with 'theme-layout-code' %}
 
   {% if customer.tags contains Role_Admin %}
       {% assign featured_collection = collections[section.settings.admin_collection].products %}
@@ -114,7 +101,7 @@
     {% else %}
     	{% continue %}
     {% endif %}
-    
+
     {% if featured_collection.products.size == 0 %}
       <div class="grid__item">
         <div class="helper-section">
@@ -141,11 +128,11 @@
     {% endif %}
     {% endfor %}
   </div>
-  
+
   <div class="page-width text-center" >
     <a href="/pages/catalog" class="btn" >View More . . .</a>
   </div>
-  
+
 </div>
 
 {% schema %}
