--- a/sections/popup-section.liquid
+++ b/sections/popup-section.liquid
@@ -1,51 +1,18 @@
 
-{% if customer %}
-
-  {% assign region_NorthEast = "general.Region_Tags.NorthEast" | t %}
-  {% assign region_SouthEast = "general.Region_Tags.SouthEast" | t %}
-  {% assign region_California = "general.Region_Tags.California" | t %}
-  {% assign region_South = "general.Region_Tags.South" | t %}
-  {% assign region_Mountain = "general.Region_Tags.Mountain" | t %}
-  {% assign region_MidAtlantic = "general.Region_Tags.MidAtlantic" | t %}
-  {% assign region_MidWest = "general.Region_Tags.MidWest" | t %}
-  {% assign region_GreatLakes = "general.Region_Tags.GreatLakes" | t %}
-
-  {% assign Role_User = 'general.Role.User' | t %}
-  {% assign Role_Printer = 'general.Role.Printer' | t %}
-  {% assign Role_Manager = 'general.Role.Manager' | t %}
-  {% assign Role_ASM = 'general.Role.ASM' | t %}
-  {% assign Role_Admin = 'general.Role.Admin' | t %}
-
-  {% if customer.tags contains region_NorthEast %}
-    {% assign customer_region_tag = region_NorthEast %}
-  {% elsif customer.tags contains region_SouthEast %}
-    {% assign customer_region_tag = region_SouthEast %}
-  {% elsif customer.tags contains region_California %}
-    {% assign customer_region_tag = region_California %}
-  {% elsif customer.tags contains region_South %}
-    {% assign customer_region_tag = region_South %}
-  {% elsif customer.tags contains region_Mountain %}
-    {% assign customer_region_tag = region_Mountain %}
-  {% elsif customer.tags contains region_MidAtlantic %}
-    {% assign customer_region_tag = region_MidAtlantic %}
-  {% elsif customer.tags contains region_MidWest %}
-    {% assign customer_region_tag = region_MidWest %}
-  {% elsif customer.tags contains region_GreatLakes %}
-    {% assign customer_region_tag = region_GreatLakes %}
-  {% endif %}
+{% include 'customer-account-common-code' with 'theme-layout-code' %}
 
 {% endif %}
 
 {% if section.settings.show_popup == true %}
-  {% if section.blocks.size > 0 %}	
+  {% if section.blocks.size > 0 %}
 	<div class="index-section-popUp">
       <div class="popUp" id="popUp--{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="popup-section" style="display:none !important;">
-        {% for block in section.blocks %} 
+        {% for block in section.blocks %}
           {% assign blockImage_width = block.settings.image_width |append:'x' %}
           {% comment %} if block.settings.image != blank {% endcomment %}
         	{% if block.settings.whom_to_show == 'All' %}
               <a id="popUp--{{ block.id }}" class="js-toggle-popup-modal" data-popUp-index="{{ forloop.index0 }}" {{ block.shopify_attributes }}
-                 {% if block.type == 'image-block' %} 
+                 {% if block.type == 'image-block' %}
                  	href="{{ block.settings.image | img_url: blockImage_width }}"
                  {% elsif block.type == 'text-block' %}
                 	href="https://placeholdit.imgix.net/~text?txtsize=35&amp;bg={{ block.settings.bg_color |remove:'#' }}&amp;txtclr={{ block.settings.text_color |remove:'#' }}&amp;txt={{ block.settings.popup_text |replace:' ','+' }}&amp;w={{ block.settings.popup_width }}&amp;h={{ block.settings.popup_height }}&amp;txttrack=0"
@@ -53,7 +20,7 @@
               </a>
         	{% elsif block.settings.whom_to_show == customer_region_tag %}
               <a id="popUp--{{ block.id }}" class="js-toggle-popup-modal" data-popUp-index="{{ forloop.index0 }}" {{ block.shopify_attributes }}
-                 {% if block.type == 'image-block' %} 
+                 {% if block.type == 'image-block' %}
                  	href="{{ block.settings.image | img_url: blockImage_width }}"
                  {% elsif block.type == 'text-block' %}
                     href="https://placeholdit.imgix.net/~text?txtsize=35&amp;bg={{ block.settings.bg_color |remove:'#' }}&amp;txtclr={{ block.settings.text_color |remove:'#' }}&amp;txt={{ block.settings.popup_text |replace:' ','+' }}&amp;w={{ block.settings.popup_width }}&amp;h={{ block.settings.popup_height }}&amp;txttrack=0"
@@ -113,11 +80,11 @@
               }
             }
           });
-		
+
         var parentURL = parent.window.document.location.pathname;
         console.log(parentURL);
-        if( (typeof(Storage) !== "undefined" && sessionStorage.ShowPopup == 1 ) || (parentURL.indexOf("/admin/themes/169781713/editor") != -1 && {{ section.settings.preview_popup}}) ){ 
-          setTimeout( function(){ $('.js-toggle-popup-modal').magnificPopup('open', 0); }, 2500 ); 
+        if( (typeof(Storage) !== "undefined" && sessionStorage.ShowPopup == 1 ) || (parentURL.indexOf("/admin/themes/169781713/editor") != -1 && {{ section.settings.preview_popup}}) ){
+          setTimeout( function(){ $('.js-toggle-popup-modal').magnificPopup('open', 0); }, 2500 );
         }
 
       });
@@ -291,10 +258,10 @@
         "name": "Carousal",
         "category": "Image",
         "settings": {
-          
+
         },
         "blocks": [
-          
+
         ]
       }
     ]
