--- a/snippets/mobile-nav.liquid
+++ b/snippets/mobile-nav.liquid
@@ -1,39 +1,4 @@
-{% if customer  %}
-	
-  {% assign Role_User = 'general.Role.User' | t %}
-  {% assign Role_Printer = 'general.Role.Printer' | t %}
-  {% assign Role_Manager = 'general.Role.Manager' | t %}
-  {% assign Role_ASM = 'general.Role.ASM' | t %}
-  {% assign Role_Admin = 'general.Role.Admin' | t %}
-
-  {% assign region_NorthEast = "general.Region_Tags.NorthEast" | t %}
-  {% assign region_SouthEast = "general.Region_Tags.SouthEast" | t %}
-  {% assign region_California = "general.Region_Tags.California" | t %}
-  {% assign region_South = "general.Region_Tags.South" | t %}
-  {% assign region_Mountain = "general.Region_Tags.Mountain" | t %}
-  {% assign region_MidAtlantic = "general.Region_Tags.MidAtlantic" | t %}
-  {% assign region_MidWest = "general.Region_Tags.MidWest" | t %}
-  {% assign region_GreatLakes = "general.Region_Tags.GreatLakes" | t %}
-
-  {% if customer.tags contains region_NorthEast %}
-    {% assign customer_region_tag = region_NorthEast %}
-  {% elsif customer.tags contains region_SouthEast %}
-    {% assign customer_region_tag = region_SouthEast %}
-  {% elsif customer.tags contains region_California %}
-    {% assign customer_region_tag = region_California %}
-  {% elsif customer.tags contains region_South %}
-    {% assign customer_region_tag = region_South %}
-  {% elsif customer.tags contains region_Mountain %}
-    {% assign customer_region_tag = region_Mountain %}
-  {% elsif customer.tags contains region_MidAtlantic %}
-    {% assign customer_region_tag = region_MidAtlantic %}
-  {% elsif customer.tags contains region_MidWest %}
-    {% assign customer_region_tag = region_MidWest %}
-  {% elsif customer.tags contains region_GreatLakes %}
-    {% assign customer_region_tag = region_GreatLakes %}
-  {% endif %}
-
-{% endif %}
+{% include 'customer-account-common-code' with 'theme-layout-code' %}
 
 {% assign region_handle = customer_region_tag | remove: 'Region:' |replace:'0','o' | downcase %}
 
@@ -69,11 +34,11 @@
 {% assign tag_array = tag_array |remove_first: "," |split:',' %}
 
 <ul id="MobileNav" class="mobile-nav post-large--hide">
-  
+
   <li class="mobile-nav__link">
     <a id="link2-new" href="/collections/{{ collection_handle }}?sort_by=created-descending" class="mobile-nav">New!</a>
   </li>
-  
+
   {% for link in mobile-nav.links %}
   {% assign child_list_handle = link.title | handleize %}
   <li class="mobile-nav__link" aria-haspopup="true">
@@ -83,7 +48,7 @@
         {{ link.title }}
         {% include 'mobile-nav-icons' %}
       </a>
-      <ul class="mobile-nav__sublist">  
+      <ul class="mobile-nav__sublist">
         {% for childlink in linklists[child_list_handle].links %}
         {% assign childlink_handle = childlink.url |split:'/' %}
         {% assign grand_child_list_handle = childlink.title | handle %}
@@ -91,13 +56,13 @@
             <li class="mobile-nav__sublist-link">
               <a href="/collections/{{ collection_handle }}/{{ childlink_handle.last }}" class="{% if current_tags contains childlink.handle %} site-nav--active {% endif %}">{{ childlink.title }}</a>
             </li>
-          
-        
+
+
           {% elsif childlink.title == 'Contact Us' %}
             <li class="mobile-nav__sublist-link">
               <a id="link2-contact" href="/pages/{{ childlink.handle }}{{ region_handle |prepend:'-' }}" class=" ">{{ childlink.title | escape }}</a>
             </li>
-          
+
 
           {% elsif childlink.title == 'Payment Codes' %}
             <li class="mobile-nav__link " aria-haspopup="true">
@@ -117,8 +82,8 @@
                 </li>
               </ul>
             </li>
-          
-          
+
+
           {% elsif childlink.title == 'POS University' %}
             <li class="mobile-nav__link " aria-haspopup="true">
               <a id="link2-payment-codes" hrefs="/pages/{{ childlink.handle }}" style="color:black;" class="mobile-nav__sublist-trigger">
@@ -152,8 +117,19 @@
                 {% endfor %}
               </ul>
             </li>
-        	
+
           {% elsif linklists[grand_child_list_handle].links != blank %}
+          {% if childlink.handle == 'groups-ergs' or childlink.handle == 'human-resources' %}
+            {% if region_handle == "california" %}
+              {% assign show_link = true %}
+            {% else %}
+              {% assign show_link = false %}
+            {% endif %}
+          {% else %}
+            {% assign show_link = true %}
+          {% endif %}
+        
+          {% if show_link %}
         	<li class="mobile-nav__link " aria-haspopup="true">
               <a id="link2-{{ childlink.handle }}" hrefs="/pages/{{ childlink.handle }}" style="color:black;" class="mobile-nav__sublist-trigger">
                 {{ childlink.title | escape }}
@@ -170,12 +146,13 @@
 				{% endfor %}
               </ul>
             </li>
+            {% endif %}
           {% endif %}
-        
+
            	<script>
-          	  {%if current_tags contains childlink_handle.last %}{% assign active_index = primary_index %}{% assign active = true %}{% endif %} 
+          	  {%if current_tags contains childlink_handle.last %}{% assign active_index = primary_index %}{% assign active = true %}{% endif %}
           	</script>
-        
+
         {% endfor %}
       </ul>
     {% else %}
@@ -203,7 +180,7 @@
       </li>
     {% endif %}
   {% endif %}
-  
+
   <li class="mobile-nav__link">
     {% if section.settings.header_search_enable and false %}
       <div class="header-bar__module header-bar__search">
@@ -211,19 +188,19 @@
       </div>
     {% endif %}
   </li>
-  
+
 </ul>
 
 <script>
-  
+
     $(document).ready(function(){
       {% if customer.tags contains Role_Printer %}
       	$('#MobileNav').block({message:'', overlayCSS: { backgroundColor: 'white', cursor: 'not-allowed'} });
       {% endif %}
-      
+
       {% if active == true %}
      	 $('#link2{{ active_index }}').addClass('site-nav--active');
       {% endif %}
     });
-  
+
 </script>
