--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -1,45 +1,4 @@
-{% if customer  %}
-
-  {% assign region_NorthEast = "general.Region_Tags.NorthEast" | t %}
-  {% assign region_SouthEast = "general.Region_Tags.SouthEast" | t %}
-  {% assign region_California = "general.Region_Tags.California" | t %}
-  {% assign region_South = "general.Region_Tags.South" | t %}
-  {% assign region_Mountain = "general.Region_Tags.Mountain" | t %}
-  {% assign region_MidAtlantic = "general.Region_Tags.MidAtlantic" | t %}
-  {% assign region_MidWest = "general.Region_Tags.MidWest" | t %}
-  {% assign region_GreatLakes = "general.Region_Tags.GreatLakes" | t %}
-
-  {% if customer.tags contains region_NorthEast %}
-    {% assign customer_region_tag = region_NorthEast %}
-  {% elsif customer.tags contains region_SouthEast %}
-    {% assign customer_region_tag = region_SouthEast %}
-  {% elsif customer.tags contains region_California %}
-    {% assign customer_region_tag = region_California %}
-  {% elsif customer.tags contains region_South %}
-    {% assign customer_region_tag = region_South %}
-  {% elsif customer.tags contains region_Mountain %}
-    {% assign customer_region_tag = region_Mountain %}
-  {% elsif customer.tags contains region_MidAtlantic %}
-    {% assign customer_region_tag = region_MidAtlantic %}
-  {% elsif customer.tags contains region_MidWest %}
-    {% assign customer_region_tag = region_MidWest %}
-  {% elsif customer.tags contains region_GreatLakes %}
-    {% assign customer_region_tag = region_GreatLakes %}
-  {% endif %}
-
-{% endif %}
-
-{% if customer.tags contains Role_ASM %}
-  {% assign collection_handle = collection.handle %}
-  {% unless collection %}
-      {% assign collection_handle = customer_region_tag | remove: 'Region:' |replace:'0','o' | downcase | append: '-my-products' %}
-  {% endunless %}
-{% elsif customer.tags contains Role_Admin %}
-  {% assign collection_handle = 'all' %}
-{% elsif customer.tags contains Role_User or customer.tags contains Role_Manager %}
-  {% assign collection_handle = customer_region_tag | remove: 'Region:' |replace:'0','o' | downcase | append: '-products' %}
-  {% assign non_asm = true %}
-{% endif %}
+{% include 'customer-account-common-code' with 'theme-layout-code' %}
 
 {% assign within_collection = collection_handle |prepend:'/collections/' |append:'/products/' %}
 
@@ -101,9 +60,9 @@
     {% endif %}
     {% if featured.title != '' %}
       <p class="grid-link__meta">
-        
+
         {% capture price %}{{ featured.price | money }}{% endcapture %}
-        
+
         {% unless collection.title == 'All' %}
         {% if product.options.size == 2 %}
           {% for option in product.options_with_values %}
@@ -125,7 +84,7 @@
           {% endfor %}
         {% endif %}
         {% endunless %}
-        
+
         {% if on_sale %}
         <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
         <s class="grid-link__sale_price">{{ featured.compare_at_price | money }}</s>
